--- a/app/views/phone_number_authorization/new.html.haml
+++ b/app/views/phone_number_authorization/new.html.haml
@@ -10,5 +10,5 @@
       %p 本人確認のため、携帯電話のSMS(ショートメッセージサービス)を利用して認証を行います。
       .btn-red SMSを送信する
       %p ※電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
-      = render partial:"render/link_right",locals:{text:"電話番号の確認が必要な理由",address:"/"}
+      = render "render/link_right",text:"電話番号の確認が必要な理由",address:root_path
 
