--- a/app/views/address_registration/new.html.haml
+++ b/app/views/address_registration/new.html.haml
@@ -12,11 +12,11 @@
         %span.required 必須
         %input.input__form__group__input{placeholder:"例) ヤマダ"}
         %input.input__form__group__input{placeholder:"例) アヤ"}
-      = render partial:'render/input-form-required',locals:{label:"郵便番号",example:"例)123-4567"}
+      = render 'render/input-form-required',label:"郵便番号",example:"例)123-4567"
       = render "render/prefecture-required"
-      = render partial:'render/input-form-required',locals:{label:"市区町村",example:"例)横浜市緑区"}
-      = render partial:'render/input-form-required',locals:{label:"番地",example:"例)青山1-1-1"}
-      = render partial:'render/input-form-optional',locals:{label:"建物名",example:"例)柳ビル103"}
-      = render partial:'render/input-form-optional',locals:{label:"電話",example:"例) 000000000"}
-      = render partial:'render/input-form-button',locals:{name:'次へ進む'}
+      = render 'render/input-form-required',label:"市区町村",example:"例)横浜市緑区"
+      = render 'render/input-form-required',label:"番地",example:"例)青山1-1-1"
+      = render 'render/input-form-optional',label:"建物名",example:"例)柳ビル103"
+      = render 'render/input-form-optional',label:"電話",example:"例) 000000000"
+      = render 'render/input-form-button',name:'次へ進む'
 
