signup-new-markup

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,4 +7,5 @@
 @import "mixin";
 @import "./products/products";
 @import "./users/index";
-@import "registration_login"
+@import "registration_login";
+@import "signup"
