一個前のコミットに伴うリファクタリングたち

--- a/app/views/address_registration/new.html.haml
+++ b/app/views/address_registration/new.html.haml
@@ -1,7 +1,7 @@
-.address__container
-  .address__title 住所入力
-  %form.address__content
-    .address__content__box
+.registration__container
+  .registration__title 住所入力
+  %form.registration__content
+    .registration__content__box
       .input-form-box.first-form
         %label お名前
         %span.required 必須
