--- a/app/views/render/_link_right.html.haml
+++ b/app/views/render/_link_right.html.haml
@@ -1,3 +1,4 @@
-.link-right
-  = link_to(text, address)
-  %i.fas.fa-chevron-right
+.input-form-box
+  .link-right
+    = link_to(text, address)
+    %i.fas.fa-chevron-right
