--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,5 +11,5 @@
 @import "./users/mypage_main";
 @import "./users/mypage_info_registration";
 @import "registration_login";
-@import "./phone_number.scss";
-@import "./address.scss"
+@import "./registration_box.scss";
+
