--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -259,6 +259,48 @@
   }
 }
 
+.listing-edit{
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  &__box{
+    border-top: 1px solid #eee;
+    background-color: white;
+    width: 700px;
+    margin: 0 auto;
+    &__button{
+      padding: 40px;
+      font-size: 14px;    
+      .btn-default{
+        margin: 40px auto;
+        display: block;
+        width: 100%;
+        line-height: 48px;
+        font-size: 14px;
+        border: 1px solid transparent;
+        cursor: pointer;
+        text-align: center;
+      }
+      .btn-red{
+        background: #ea352d;
+        border: 1px solid #ea352d;
+        color: #fff;
+      }
+      .btn-gray{
+        width: 45%;
+        margin: 24px auto 0;
+        background: #aaa;
+        border: 1px solid #aaa;
+        color: #fff;
+      }
+      .btn-gray:hover {
+        opacity: 0.8;
+      }
+    } 
+  }
+}
+
 .listing-footer{
   height: 220px;
   background-color: #f5f5f5;
