--- a/app/assets/stylesheets/common_layout/form.scss
+++ b/app/assets/stylesheets/common_layout/form.scss
@@ -71,6 +71,7 @@
   .select_wrap{
     margin-top: 8px; 
     position: relative;
+    display: flex;
     select{
       -webkit-appearance: none;
       padding: 0 16px;
@@ -83,7 +84,6 @@
       outline: 0;
     }
     i{
-      height: 100%;
       display: block;
       position: absolute;
       top: 35%;
@@ -106,6 +106,18 @@
   @include form-default;
 }
 
+.month-form-box{
+  @include form-default;
+  width: 150px;
+  .select_wrap{
+    width: calc(100% - 32px);
+    display: inline-block;
+  }
+  h2{
+    display: inline-block;
+  }
+}
+
 .input-form-box{
   @include form-default;
   .btn-red{
@@ -117,4 +129,10 @@
 }
 .first-form{
   margin-top: 0px;
+}
+
+.help-link{
+  margin-top: 8px;
+  font-weight: bold;
+  @include link-right;
 }
