一番最初のフォームはmargin-topが0

--- a/app/assets/stylesheets/common_layout/form.scss
+++ b/app/assets/stylesheets/common_layout/form.scss
@@ -127,8 +127,9 @@
     @include link-right;
   }
 }
-.first-form{
-  margin-top: 0px;
+
+.input-form-box:nth-child(1){
+  margin-top:0 ;
 }
 
 .help-link{
