仮置きの画像貼っつけ

--- a/app/views/credit_card/new.html.haml
+++ b/app/views/credit_card/new.html.haml
@@ -3,6 +3,7 @@
   %form.registration__content
     .registration__content__box
       =render 'render/input-form-required',label:'カード番号',example:'半角数字のみ'
+      = image_tag 'credit_card.jpg'
       .month-form-box
         %label 有効期限
         %span.required 必須
