--- a/app/views/users/_mypage-sidebar.html.haml
+++ b/app/views/users/_mypage-sidebar.html.haml
@@ -3,15 +3,15 @@
     %nav.mypage-nav
       %ul.mypage-nav-list
         = render partial: 'mypagesidebar2', collection: @subjects
-        = render partial: 'mypagesidebar3', collection: @articles
+        = render partial: 'mypagesidebar3', collection: @subjects2
 
         %nav.mypage-nav-head
           %h1 メルペイ
           %ul.mypage-nav-list
-          = render partial: 'mypagesidebar3', collection: @articles2
+          = render partial: 'mypagesidebar3', collection: @subjects3
           
           %h1 設定
-          = render partial: 'mypagesidebar3', collection: @articles3
+          = render partial: 'mypagesidebar3', collection: @subjects4
 
 
 
