--- a/app/views/users/_mypage-sidebar.html.haml
+++ b/app/views/users/_mypage-sidebar.html.haml
@@ -2,16 +2,16 @@
   .l-side
     %nav.mypage-nav
       %ul.mypage-nav-list
-        = render partial: 'mypagesidebar2', collection: @subjects
-        = render partial: 'mypagesidebar3', collection: @subjects2
+        = render partial: 'users/mypagesidebar2', collection: @subjects
+        = render partial: 'users/mypagesidebar3', collection: @subjects2
 
         %nav.mypage-nav-head
           %h1 メルペイ
           %ul.mypage-nav-list
-          = render partial: 'mypagesidebar3', collection: @subjects3
+          = render partial: 'users/mypagesidebar3', collection: @subjects3
           
           %h1 設定
-          = render partial: 'mypagesidebar3', collection: @subjects4
+          = render partial: 'users/mypagesidebar3', collection: @subjects4
 
 
 
