同じタイトルのビューだったのでリファクタリング

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "./top/_content";
 @import "slick";
 @import "mixin";
+@import "./users/mypage";
 @import "./common_layout/form";
 @import "./products/products";
 @import "./users/index";
