--- a/app/assets/stylesheets/users/mypage_info_registration.scss
+++ b/app/assets/stylesheets/users/mypage_info_registration.scss
@@ -1,11 +1,5 @@
 .mypage__main{
-  background: #fff;
-  .mypage__info__registration__header{
-    font-size: 24px;
-    font-weight: bold;
-    padding: 8px 24px;
-    text-align: center;
-  }
+  @include mypage-main;
   .mypage__info__registration__contents{
     padding: 64px;
     border-top: 1px solid #f5f5f5;
