メルカリのイメージタグ背景色修正

--- a/app/assets/stylesheets/users/_mypage-sidebar.scss
+++ b/app/assets/stylesheets/users/_mypage-sidebar.scss
@@ -54,6 +54,7 @@
   }
 }
 
+.mypage-nav-head{
   h1 {
     background: #eee;
     margin: 40px 0 0;
@@ -61,5 +62,5 @@
     font-weight: 600;
     border-bottom: 8px solid #eee;
   }
-
+}
 
