--- a/app/assets/stylesheets/users/mypage.scss
+++ b/app/assets/stylesheets/users/mypage.scss
@@ -1,7 +1,7 @@
 @mixin mypage-main {
   .mypage__main{
     background: #fff;
-    .mypage__main__header{
+    &__header{
       font-size: 24px;
       font-weight: bold;
       padding: 8px 24px;
