--- a/app/views/top/_content.html.haml
+++ b/app/views/top/_content.html.haml
@@ -17,7 +17,8 @@
           .contents__item__box__price
             ¥10,000
           .contents__item__box__favorite
-            = fa_icon 'heart-o', class: 'gray', text: '6'
+            %i.far.fa-heart.gray
+            %span 6
       .contents__item__box
         .contents__item__box__image
           = image_tag 'item1', alt: '', height: '213', width: '213', class: ''
@@ -27,7 +28,8 @@
           .contents__item__box__price
             ¥10,000
           .contents__item__box__favorite
-            = fa_icon 'heart-o', class: 'gray', text: '6'
+            %i.far.fa-heart.gray
+            %span 6
       .contents__item__box
         .contents__item__box__image
           = image_tag 'item1', alt: '', height: '213', width: '213', class: ''
@@ -37,7 +39,8 @@
           .contents__item__box__price
             ¥10,000
           .contents__item__box__favorite
-            = fa_icon 'heart-o', class: 'gray', text: '6'
+            %i.far.fa-heart.gray
+            %span 6
       .contents__item__box
         .contents__item__box__image
           = image_tag 'item1', alt: '', height: '213', width: '213', class: ''
@@ -47,6 +50,7 @@
           .contents__item__box__price
             ¥10,000
           .contents__item__box__favorite
-            = fa_icon 'heart-o', class: 'gray', text: '6'
+            %i.far.fa-heart.gray
+            %span 6
     .contents__item__box__all-items-view
       全ての商品を見る
