--- a/app/views/top/_header.html.haml
+++ b/app/views/top/_header.html.haml
@@ -28,11 +28,11 @@
       %ul.header-bottom__user-menu
         %li.header-bottom__user-menu__good
           .header-bottom__user-menu__good__icon
-            = fa_icon 'heart-o'
+            %i.far.fa-heart
             %span いいね！一覧
         %li.header-bottom__user-menu__notification
           .header-bottom__user-menu__notification__icon
-            = fa_icon 'bell-o', class:'gray'
+            %i.fas.fa-bell
             %span お知らせ
             .header-bottom__user-menu__notification__icon__count 10
           %ul.header-bottom__user-menu__notification__wrapper
