--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,4 +4,6 @@
 .mypage__container
   = render 'mypage-sidebar'
   = render 'mypage-main'
-= render 'top/footer'
+
+.footer
+  = render 'top/footer'
