サイドバーの矢印の色の変更
矢印の色が薄かったので少し濃くしました。

--- a/app/assets/stylesheets/users/_mypage-sidebar.scss
+++ b/app/assets/stylesheets/users/_mypage-sidebar.scss
@@ -40,7 +40,7 @@
         position: absolute;
         right: 8%;
         top: 35%;
-        color: #f5f5f5;
+        color: #BBBBBB;
       }
     }
     
