--- a/app/assets/stylesheets/common_layout/form.scss
+++ b/app/assets/stylesheets/common_layout/form.scss
@@ -38,6 +38,16 @@
   p{
     margin-top: 8px;
     line-height: 1.5;
+    font-size: 14px;
+  }
+  p.text-center{
+    text-align: center;
+    a{
+      color: #0099e8;
+    }
+    a:hover{
+      @include a-tag-hover;
+    }
   }
   span.optional{
     margin-left: 8px;
@@ -68,6 +78,25 @@
     font-size: 16px;
     outline: 0;
   }
+  .input-text-container{
+    width: 100%;
+    display: flex;
+    input.half{
+      margin-top: 8px; 
+      box-sizing: border-box;
+      width: 50%;
+      height: 48px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      padding: 10px 16px 8px;
+      font-size: 16px;
+      outline: 0;
+    }
+    input.half:nth-child(1){
+      width: calc(50% - 8px);
+      margin-right:8px; 
+    }
+  }
   .select_wrap{
     margin-top: 8px; 
     position: relative;
@@ -90,6 +119,34 @@
       right: 16px;
       z-index: 2;
       color: #888;    
+    }
+    .select_wrap-birth{
+      position: relative;
+      display: flex;
+      select{
+        -webkit-appearance: none;
+        padding: 0 16px;
+        width: 100%;
+        height: 48px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 16px;
+        background: #fff;
+        outline: 0;
+        width: 80px;
+      }
+      i{
+        display: block;
+        position: absolute;
+        top: 35%;
+        right: 28px;
+        z-index: 2;
+        color: #888;    
+      }
+      h2{
+        margin-left: 8px;
+        line-height: 3;
+      }
     }
   }
 }
@@ -140,4 +197,11 @@
   margin-top: 8px;
   font-weight: bold;
   @include link-right;
+}
+
+p.text-gray{
+  margin-top: 8px;
+  line-height: 1.5;
+  font-size: 14px;
+  color: #888;
 }
