--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,42 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.registration__container
+  .registration__title 会員情報入力
+  %form.registration__content
+    .registration__content__box
+      =render 'render/input-form-required',label:'ニックネーム',example:'例）メルカリ太郎'
+      =render 'render/input-form-required',label:'メールアドレス',example:'PC・携帯どちらでも可'
+      =render 'render/input-form-required',label:'パスワード',example:'６文字以上'
+      =render 'render/input-form-required',label:'パスワード（確認）',example:'６文字以上'
+      .input-form-box
+        %label 本人確認
+        %p 安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
+      = render 'render/input-name-form-required', label:'お名前(全角)',example1:'例)山田',example2:'例)彩'
+      = render 'render/input-name-form-required', label:'お名前カナ(全角)',example1:'例)ヤマダ',example2:'例)アヤ'
+      .input-form-box
+        %label 生年月日
+        %span.required 必須
+        .select_wrap
+          .select_wrap-birth
+            = date_select('birth_year','method',end_year:2019,discard_month:true)
+            %i.fas.fa-chevron-down
+            %h2 年
+          .select_wrap-birth
+            = date_select('birth_month','method',use_month_numbers:true,discard_year:true,discard_day:true)
+            %i.fas.fa-chevron-down
+            %h2 月
+          .select_wrap-birth
+            %select
+              - @tests = 1...32
+              - @tests.each do |index|
+                %option{value:index}= index
+            %i.fas.fa-chevron-down
+            %h2 日
+      %p.text-gray ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
+      .input-form-box
+        %iframe{frameborder: "0", height: "78", role: "presentation", sandbox: "allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox", scrolling: "no", src: "https://www.google.com/recaptcha/api2/anchor?ar=1&k=6LfZGCYTAAAAAHoK-s7Lg5OdYg5Fq4susvALmZoc&co=aHR0cHM6Ly93d3cubWVyY2FyaS5jb206NDQz&hl=ja&v=v1562567553145&size=normal&cb=kjjakmvopm34", width: "304"}
+      .input-form-box
+        %p.text-center 
+          「次へ進む」のボタンを押すことにより、
+          =link_to '利用規約', root_path
+          に同意したものとみなします
+      =render "render/input-form-button",name:'次へ進む'
+
