--- a/app/assets/stylesheets/products/products-detail.scss
+++ b/app/assets/stylesheets/products/products-detail.scss
@@ -49,6 +49,9 @@
       //border-style: solid;
       //border-color: rgb(245, 245, 245);
       border-image: initial;
+      a {
+        color: #0099e8;
+      }
       tr {
         height: 50px;
       }
@@ -66,6 +69,23 @@
         border-style: solid;
         border-color: rgb(245, 245, 245);
       }
+      &__assesments {
+        display: flex;
+        span {
+          margin-right: 25px;
+        }
+      }
+        &__assesment {
+          &-good {
+            color: #ef5185;
+          }
+          &-ordinary {
+            color: #fba933;
+          }
+          &-bad {
+            color: #6ab5d8;
+          }
+        }
     }
     &__price-tax-shipping_cost {
       display: flex;
