--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -21,19 +21,33 @@
         %table
           %tr
             %th 出品者
-            %td Yomori
+            %td
+              Yomori
+              .item-detail__table__assesments
+                .item-detail__table__assesment-good
+                  %i.fas.fa-grin
+                %span 33
+                .item-detail__table__assesment-ordinary
+                  %i.fas.fa-meh
+                %span 22
+                .item-detail__table__assesment-bad
+                  %i.fas.fa-frown
+                %span 11
           %tr
             %th カテゴリー
             %td
               .item-detail__table__category
-              レディース
+                = link_to 'レディース', '/'
               .item-detail__table__category
-                = fa_icon 'angle-right', text: 'トップス'
+                %i.fas.fa-angle-right
+                = link_to 'トップス', '/'
               .item-detail__table__category
-                = fa_icon 'angle-right', text: 'Tシャツ/カットソー(半袖/袖なし)'
+                %i.fas.fa-angle-right
+                = link_to 'Tシャツ/カットソー(半袖/袖なし)','/'
           %tr
             %th ブランド
-            %td ルールマラソン
+            %td
+              = link_to 'ルールマラソン', '/'
           %tr
             %th 商品のサイズ
             %td FREE SIZE
