--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -80,26 +80,34 @@
         ご覧いただきありがとうございます。
         %br
         シンプルなデザインですが、色々なコーディネートに合わせやすいと思います。素材は綿100%です。
-  .item-detail__like-bad-other
-    .item-detail__like
-    .item-detail__bad
-    .item-detail__other
-  .item-detail__comment-form-box
-    .item-detail__comment-form-box__precautionary
-      .item-detail__comment-form-box__form
-        textbox
-      .item-detail__comment-form-box__button
-        コメントする
-  .item-detail__prev-next
-    .item-detail__prev
-      .item-detail__prev__arrow
-      <
-      .item-detail__prev__item-name
-      サイクルジャージ　ツインシックス　M
-    .item-detail__next
-      .item-detail__next__arrow
-      >
-      .item-detail__next__item-name
-      新品未開封マキアージュ ドラマティックスキンセンサーベースUV
-  .social_icons
-  .other_items
+    .item-detail__like-bad-other
+      .item-detail__like
+        %i.far.fa-heart
+        %span いいね！
+        %span 4
+      .item-detail__bad
+        %i.far.fa-flag
+        %span 不適切な商品の報告
+        %span 
+      .item-detail__other
+        %i.fas.fa-lock
+        = link_to 'あんしん・あんぜんへの取り組み'
+    .item-detail__comment-form-box
+      .item-detail__comment-form-box__precautionary
+        .item-detail__comment-form-box__form
+          textbox
+        .item-detail__comment-form-box__button
+          コメントする
+    .item-detail__prev-next
+      .item-detail__prev
+        .item-detail__prev__arrow
+        <
+        .item-detail__prev__item-name
+        サイクルジャージ　ツインシックス　M
+      .item-detail__next
+        .item-detail__next__arrow
+        >
+        .item-detail__next__item-name
+        新品未開封マキアージュ ドラマティックスキンセンサーベースUV
+    .item-detai__social_icons
+    .item-detail__other_items
