--- a/app/assets/stylesheets/products/products-detail.scss
+++ b/app/assets/stylesheets/products/products-detail.scss
@@ -101,14 +101,14 @@
       font-size: 10px;
     }
   &__purchase-button {
-    width: 80%;
+    width: 85%;
     height: 60px;
     margin: 0 auto;
     //vertical-align: middle;
     font-size: 25px;
     color: #fff;
     text-align: center;
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.89);
       a {
         line-height: 60px;
         display: block;
@@ -119,6 +119,31 @@
     &__comment {
       margin: 30px;
       font-size: 18px;
+    }
+    &__like-bad-other {
+      display: flex;
+      font-size: 14px;
+    }
+    &__like {
+      background:#f5f5f5;
+      border: 1px solid #f5f5f5;
+      border-radius: 40px;
+      padding: 10px;
+      margin:0 20px;
+    }
+    &__bad {
+      background:#f5f5f5;
+      border: 1px solid #f5f5f5;
+      border-radius: 40px;
+      padding: 10px
+    }
+    &__other {
+      margin-top: 10px;
+      margin-left: 80px;
+      color: #0099e8;
+      a {
+        color: #0099e8;
+      }
     }
   }
 }
