--- a/app/assets/stylesheets/products/products-detail.scss
+++ b/app/assets/stylesheets/products/products-detail.scss
@@ -1,4 +1,4 @@
-.wrapper {
+.wrapper--item-detail {
   width: 100%;
   margin: 0 auto;
   padding: 0px;
@@ -143,6 +143,114 @@
       color: #0099e8;
       a {
         color: #0099e8;
+      }
+    }
+    &__comment {
+      &__box {
+        img {
+          width: 40px;
+          height: 40px;
+          border-style: solid;
+          border-radius: 50%;
+            }
+        &__content {
+          margin-top:50px;
+          &__profile {
+            display: flex;
+            //idth: 100%;
+            &__name {
+              margin-left: 10px;
+            }
+          }
+            &__seller {
+              font-size: 14px;
+              background: #f5f5f5;
+              width:50px;
+            }
+          &__body {
+            margin-left: 40px;
+            background-color: #f5f5f5;
+            border-radius: 20px;
+            padding: 10px;
+            margin-bottom: 30px;
+            &__text {
+            }
+            &__icon {
+              display: flex;
+              justify-content: space-between;
+              color: #aaa;
+            }
+          }
+        }
+      }
+      &__caution {
+        margin-top: 40px;
+        font-size: 14px;
+        background-color: #fff6de;
+      }
+      &__form {
+        margin-top: 10px;
+        width: 100%;
+        height: 100px;
+        background: #f5f5f5;
+        &__button {
+          width: 100%;
+          height:50px;
+          color: white;
+          font-size: 14px;
+          line-height: 50px;
+          text-align: center;
+          background: #888;
+        }
+      }
+    }
+    &__prev-next {
+      display: flex;
+      justify-content: space-between;
+      overflow: hidden;
+      color: #0099e8;
+      background: #f5f5f5;
+    }
+      &__prev {
+        display: flex;
+        width:40%;
+      }
+      &__next {
+        display: flex;
+        width:40%;
+        &__itme-name {
+          color: #0099e8;
+        }
+      }
+    &__social_icons {
+      display: flex;
+      justify-content: center;
+      font-size: 50px;
+      height: 130px;
+      line-height: 150px;
+      &__facebook {
+        color: #385185;
+        background: white;
+        margin-right: 30px;
+      }
+      &__twitter {
+        color: #5d9dc9;
+        background:white;
+        margin-right: 30px;
+      }
+      &__pinterest {
+        color: #aa262a;
+        background: white;
+        margin-right: 30px;
+      }
+    }
+    &__other_items {
+      padding-top: 30px;
+      h2 {
+        font-size: 22px;
+        color: #0099e8;
+        font-weight: 800;
+        background: #f5f5f5;
       }
     }
   }
