拡張子の変更

--- a/app/views/top/_content.html.haml
+++ b/app/views/top/_content.html.haml
@@ -10,7 +10,7 @@
     .contents__items
       .contents__item__box
         .contents__item__box__image
-          = image_tag 'item1', alt: '', height: '213', width: '213', class: ''
+          = image_tag 'item1.jpg', alt: '', height: '213', width: '213', class: ''
         .contents__item__box__item-name
           ecco crepe tray スニーカーブーツ DANISH 23.5
         .contents__item__box__price-favorite
@@ -21,7 +21,7 @@
             %span 6
       .contents__item__box
         .contents__item__box__image
-          = image_tag 'item1', alt: '', height: '213', width: '213', class: ''
+          = image_tag 'item1.jpg', alt: '', height: '213', width: '213', class: ''
         .contents__item__box__item-name
           ecco crepe tray スニーカーブーツ DANISH 23.5
         .contents__item__box__price-favorite
@@ -32,7 +32,7 @@
             %span 6
       .contents__item__box
         .contents__item__box__image
-          = image_tag 'item1', alt: '', height: '213', width: '213', class: ''
+          = image_tag 'item1.jpg', alt: '', height: '213', width: '213', class: ''
         .contents__item__box__item-name
           ecco crepe tray スニーカーブーツ DANISH 23.5
         .contents__item__box__price-favorite
@@ -43,7 +43,7 @@
             %span 6
       .contents__item__box
         .contents__item__box__image
-          = image_tag 'item1', alt: '', height: '213', width: '213', class: ''
+          = image_tag 'item1.jpg', alt: '', height: '213', width: '213', class: ''
         .contents__item__box__item-name
           ecco crepe tray スニーカーブーツ DANISH 23.5555555555555555555555555557777777777777777777777777777777777
         .contents__item__box__price-favorite
