--- a/app/assets/javascripts/top/index.js.erb
+++ b/app/assets/javascripts/top/index.js.erb
@@ -1,8 +1,8 @@
 $(document).on('turbolinks:load', function(){
   $('.slider').slick({
     dots: true,
-    prevArrow:'<img src="/assets/prev.png" class="slick-prev">',
-    nextArrow:'<img src="/assets/next.png" class="slick-next">'
+    prevArrow:'<%= image_tag "prev.png",class: "slick-prev"%>',
+    nextArrow:'<%= image_tag "next.png",class:"slick-next"%>'
   });
   $('.slick-dots').find('li').on('mouseover', function() {
     $(this).click();
