--- a/app/assets/stylesheets/users/mypage_main.scss
+++ b/app/assets/stylesheets/users/mypage_main.scss
@@ -1,4 +1,6 @@
 .mypage__main{
+  width: 700px;
+  float: right;
   &__usericon{
     background: url(/assets/mypage/user-background.jpeg);
     height: 200px;
