本人情報確認のビュー調整

--- a/app/assets/stylesheets/users/mypage_info_registration.scss
+++ b/app/assets/stylesheets/users/mypage_info_registration.scss
@@ -2,6 +2,7 @@
   @include mypage-main;
   .mypage__main{
     .mypage__info__registration__contents{
+      background: #fff;
       padding: 64px;
       border-top: 1px solid #f5f5f5;
       &__textbox{
