--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -6,6 +6,7 @@ body {
   background-color: #fff;
 }
 .mypage__container {
+  display: flex;
   background-color: f5f5f5;
   width: 1020px;
   margin: 40px 210px;
