--- a/app/assets/stylesheets/users/mypage.scss
+++ b/app/assets/stylesheets/users/mypage.scss
@@ -1,11 +1,11 @@
 @mixin mypage-main {
   .mypage__main{
-    background: #fff;
     &__header{
       font-size: 24px;
       font-weight: bold;
       padding: 8px 24px;
       text-align: center;
+      background: #fff
     }
   }  
 }
