ビュー調整

--- a/app/views/mypage_card/index.html.haml
+++ b/app/views/mypage_card/index.html.haml
@@ -4,7 +4,7 @@
   = render 'users/mypage-sidebar'
   .mypage__main
     .registration__container
-      .registration__title 支払い方法
+      .registration__title.mypage__title 支払い方法
       .registration__content
         .registration__content__box
           .input-form-box
