--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,6 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     %link{ href: "https://use.fontawesome.com/releases/v5.6.1/css/all.css", rel: "stylesheet"}/
     -# %link{ rel: "stylesheets"}
+    -# <script type="text/javascript" src="https://js.pay.jp/"></script>
   %body
     = yield
