ビューの調整

--- a/app/views/render/_input-form-required.html.haml
+++ b/app/views/render/_input-form-required.html.haml
@@ -1,4 +1,5 @@
 .input-form-box
   %label=label
   %span.required 必須
+  -# =f.text_field :name,placeholder:example
   %input{type:"text",placeholder:example}
