--- a/app/views/credit_cards/new.html.haml
+++ b/app/views/credit_cards/new.html.haml
@@ -1,20 +1,34 @@
 .registration__container
   .registration__title 支払い方法
-  %form.registration__content
+  = form_tag user_credit_cards_path,class:'registration__content',id:'new_credit_card' do
     .registration__content__box
-      =render 'render/input-form-required',label:'カード番号',example:'半角数字のみ'
+      .input-form-box
+        %label カード番号
+        %span.required 必須
+        %input{name:"number",type:"text",placeholder:'半角英数字のみ'}
+      -# renderで省略するには、form_for以下をrenderにまとめなければならない？？
+      -# = render 'render/input-form-required',label:'カード番号',example:'半角数字のみ'
       = image_tag 'credit_card.jpg'
       .month-form-box
         %label 有効期限
         %span.required 必須
         .select_wrap
-          = date_select(:test, :test, use_month_numbers:true, discard_year:true, discard_day:true)
+          = date_select(:select, :exp_month,use_month_numbers:true, discard_year:true,discard_day:true)
+          -# = date_select(:test, :test, use_month_numbers:true, discard_year:true, discard_day:true)
           %i.fas.fa-chevron-down
         %h2 月
         .select_wrap
-          = date_select(:test1, :test1, discard_month:true,start_year:2019)
+          = date_select :select,:exp_year, discard_month:true, start_year:2019
+          -# = date_select(:test1, :test1, discard_month:true,start_year:2019)
           %i.fas.fa-chevron-down
         %h2 年 
-      =render 'render/input-form-required',label:'セキュリティコード',example:'カード背面４桁もしくは３桁の番号'
+      .input-form-box
+        %label セキュリティコード
+        %span.required 必須
+        %input{name:"cvc",type:"text",placeholder:'半角英数字のみ'}
+        -# = f.text_field :token_id,placeholder:'半角英数字のみ'
+      -# =render 'render/input-form-required',label:'セキュリティコード',example:'カード背面４桁もしくは３桁の番号'
       =render 'render/help-link',text:'カード裏面の番号とは？',address:root_path
-      =render 'render/input-form-button',name:'次へ進む'
+      .input-form-box
+        %button{type:"submit",class:"btn-red"} 次へ進む
+      -# =render 'render/input-form-button',name:'次へ進む'
