--- a/app/views/shared/_new-button.html.haml
+++ b/app/views/shared/_new-button.html.haml
@@ -15,7 +15,6 @@
         =link_to "加盟店規約", "https://www.mercari.com/jp/seller_terms/"
         に同意したことになります。
 
-      %button.btn-default.btn-red
-        出品する
+      =f.submit "出品する", class: 'btn-default btn-red'
       %button.btn-default.btn-gray
-        もどる
+        =link_to "もどる", root_path
