--- a/app/assets/stylesheets/common_layout/form.scss
+++ b/app/assets/stylesheets/common_layout/form.scss
@@ -183,6 +183,7 @@
   @include form-default;
   .btn-red{
     @include button-red;
+    line-height: 50%;
   }
   .link-right{
     @include link-right;
