--- a/app/assets/stylesheets/products/products-detail.scss
+++ b/app/assets/stylesheets/products/products-detail.scss
@@ -253,6 +253,9 @@
     }
   }
 }
+.background-gray {
+  background: #f5f5f5;
+}
 /*スライダーに関するスタイル*/
 .item-detail__image__sliders {
   width: 300px;
