--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -151,7 +151,7 @@
         %i.fab.fa-pinterest-square
     .item-detail__other_items
       %h2 ◯◯さんのその他の出品
-      .contents__items
+      .contents__items.background-gray
         .contents__item__box
           .contents__item__box__image
             = image_tag 'item1', alt: '', height: '213', width: '213', class: ''
@@ -177,7 +177,7 @@
           .contents__item__box__price-favorite
           .contents__item__box__price
             ¥10,000
-    .item-detail__other_items
+    .item-detail__other_items.background-gray
       %h2 レディースのその他の商品
       .contents__items
         .contents__item__box
