--- a/app/views/render/_input-form-button.html.haml
+++ b/app/views/render/_input-form-button.html.haml
@@ -1,2 +1,4 @@
 .input-form-box
-  %button{type:"submit",class:"btn-red"}=name
+  = form.submit name, class:"btn-red"
+  -# %button{type:"submit",class:"btn-red"}=name
+  
