--- a/app/views/render/_input-name-form-required.html.haml
+++ b/app/views/render/_input-name-form-required.html.haml
@@ -2,5 +2,7 @@
   %label=label
   %span.required 必須
   .input-text-container
-    %input.half{type:"text",placeholder:example1}
-    %input.half{type:"text",placeholder:example2}
+    = form.text_field name1 ,placeholder:example1
+    = form.text_field name2 ,placeholder:example2
+    -# %input.half{type:"text",placeholder:example1}
+    -# %input.half{type:"text",placeholder:example2}
