--- a/app/views/shared/_new-listing-form.html.haml
+++ b/app/views/shared/_new-listing-form.html.haml
@@ -41,8 +41,10 @@
             カテゴリー
           %span.listing__form__detail__box__form-group__require
             必須
-          %select.listing__form__detail__box__form-group__category-select
-            %option{value: ""} ---
+          = f.collection_select :category_id, Categoryactive.all.take(13), :id, :name, {prompt: "---"}, {class: 'listing__form__detail__box__form-group__category-select'}
+
+          -# %select.listing__form__detail__box__form-group__category-select
+          -#   %option{value: ""} ---
             -# 別ブランチでactive_hash作成のため、マージ後実装。
             
         .listing__form__detail__box__form-group
@@ -76,7 +78,7 @@
             配送料の負担
           %span.listing__form__delivery__box__form-group__require
             必須
-          = f.collection_select :shipping_method_id, ShippingMethod.all, :id, :name, {prompt: "---"}, {class: 'listing__form__delivery__box__form-group__category-select'}
+          = f.collection_select :shipping_fee_id, ShippingFee.all, :id, :name, {prompt: "---"}, {class: 'listing__form__delivery__box__form-group__category-select'}
           -# %select.listing__form__delivery__box__form-group__category-select
           -#   %option{value: ""} ---
           -#   %option{value: "2"} 送料込み(出品者負担)
@@ -87,7 +89,7 @@
           %span.listing__form__delivery__box__form-group__require
             必須
           
-          = f.collection_select :prefecture, Prefecture.all, :id, :name, {prompt: "---"}, {class: 'listing__form__delivery__box__form-group__category-select'}
+          = f.collection_select :prefecture_id, Prefecture.all, :id, :name, {prompt: "---"}, {class: 'listing__form__delivery__box__form-group__category-select'}
           -# %select.listing__form__delivery__box__form-group__category-select
           -#   %option{value: ""} ---
             -# 別ブランチでactive_hash作成済みのため、マージ後実装。
@@ -116,7 +118,7 @@
               必須
           .listing__form__price__box__price__right
             ¥
-            = f.text_field :name, class:'listing__form__price__box__price__right__default', placeholder: "例）300"
+            = f.text_field :price, class:'listing__form__price__box__price__right__default', placeholder: "例）300"
 
         .listing__form__price__box__fee
           %p 販売手数料(10%)
